--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body{
 
 main{
 
-    width: 375px;
+    width: 675px;
     border-radius: 20px;
     background-color: #F4F4F4;
     margin: 0 auto 40px;
@@ -125,6 +125,15 @@ section{
     color: #555555;
     font-weight: 700;
     font-size: 20px;
+
+}
+
+@media screen and (max-width: 780px) {
+
+    main{
+
+        width: 375px;}
+
 
 }
 
